Refactor filtering logic in ClienteController and add "Volver" button to multiple HTML files for improved navigation